templates/mattermost-operator_template.yaml
---
# Source: mattermost-operator/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stakater 
  namespace: default
spec:
  host: stakater-mattermost-instance.apps.devtest.vxdqgl7u.kubeapp.cloud 
  to:
    kind: Service
    name: stakater-mattermost 
    weight: 100
  port:
    targetPort: app
  tls:
    enabled: true
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
